[package]
name    = "esp-ieee802154-examples"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
esp-backtrace  = { version = "0.7.0", features = ["panic-handler", "exception-handler", "print-uart"] }
esp-ieee802154 = { version = "0.1.0", path = "../esp-ieee802154" }
esp-println    = { version = "0.5.0", features = ["log"] }
esp32c6-hal    = { version = "0.3.0", optional = true }
esp32h2-hal    = { version = "0.1.0", optional = true }
heapless       = "0.7.16"
ieee802154     = "0.6.1"
log            = "0.4.18"

[features]
esp32c6 = ["esp32c6-hal", "esp-backtrace/esp32c6", "esp-ieee802154/esp32c6", "esp-println/esp32c6"]
esp32h2 = ["esp32h2-hal", "esp-backtrace/esp32h2", "esp-ieee802154/esp32h2", "esp-println/esp32h2"]

[profile.release]
debug = true
