[package]
name    = "xtask"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
anyhow      = "1.0.71"
bindgen     = "0.65.1"
clap        = { version = "4.3.0", features = ["derive"] }
directories = "5.0.1"
env_logger  = "0.10.0"
log         = "0.4.18"
strum       = { version = "0.24.1", features = ["derive"] }
svd2rust    = "0.28.0"
svdtools    = "0.3.0"
xshell      = "0.2.3"
